Composition Progress Panel

--- a/src/BaroquenMelody.App.Components/Pages/Home.razor
+++ b/src/BaroquenMelody.App.Components/Pages/Home.razor
@@ -38,7 +38,7 @@
             <OrnamentationConfigurationPanel/>
         </MudTabPanel>
         <MudTabPanel @ref="_compositionTab" Text="Composition" Icon="@Icons.Material.Outlined.MusicNote">
-            <CompositionStatus/>
+            <CompositionProgress/>
         </MudTabPanel>
     </MudTabs>
 </MudContainer>
