--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -38,6 +38,7 @@
 @inject IState<InstrumentConfigurationState> InstrumentConfigurationState
 @inject IState<CompositionConfigurationState> CompositionConfigurationState
 @inject IState<CompositionProgressState> CompositionProgressState
+@inject IState<BaroquenMelodyState> BaroquenMelodyState
 @inject IDispatcher Dispatcher
 @inject IOrnamentationConfigurationService OrnamentationConfigurationService
 @inject ICompositionRuleConfigurationService CompositionRuleConfigurationService
