--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -22,6 +22,7 @@
 @using System.Globalization
 @using System.Net.Http
 @using System.Net.Http.Json
+@using BaroquenMelody.Library.Infrastructure.FileSystem
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -46,3 +47,6 @@
 @inject ICompositionConfigurationService CompositionConfigurationService
 @inject IBaroquenMelodyComposerConfigurator ComposerConfigurator
 @inject IThemeProvider ThemeProvider
+@inject IMidiLauncher MidiLauncher
+@inject IMidiSaver MidiSaver
+@inject ISnackbar Snackbar
