--- a/src/BaroquenMelody.App.Components/Pages/Home.razor
+++ b/src/BaroquenMelody.App.Components/Pages/Home.razor
@@ -66,8 +66,24 @@
 
     private MudTabPanel? _compositionTab;
 
-    private void Compose()
+    private async Task Compose()
     {
+        if (!BaroquenMelodyState.Value.HasBeenSaved && BaroquenMelodyState.Value.BaroquenMelody is not null)
+        {
+            var dialogReference = await Dialog.ShowAsync<ConfirmCompositionDialogue>("Save composition?", new DialogOptions());
+            var dialogResult = await dialogReference.Result;
+
+            if (dialogResult?.Canceled ?? false)
+            {
+                return;
+            }
+
+            if (dialogResult?.Data is true)
+            {
+                await Save();
+            }
+        }
+
         Dispatcher.Dispatch(new Compose());
 
         ActivateCompositionTab();
@@ -78,6 +94,21 @@
         if (_tabs?.ActivePanel != _compositionTab)
         {
             _tabs?.ActivatePanel(_compositionTab);
+        }
+    }
+
+    private async Task Save()
+    {
+        var isSaved = await MidiSaver.SaveAsync(
+            BaroquenMelodyState.Value.BaroquenMelody!,
+            BaroquenMelodyState.Value.Path,
+            new CancellationTokenSource(TimeSpan.FromSeconds(10)).Token
+        ).ConfigureAwait(false);
+
+        if (isSaved)
+        {
+            Snackbar.Add("Saved composition!", Severity.Success);
+            Dispatcher.Dispatch(new MarkCompositionSaved());
         }
     }
 }
