Enable Solo Composition

--- a/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationPanel.razor
+++ b/src/BaroquenMelody.App.Components/Shared/InstrumentConfigurationPanel.razor
@@ -5,7 +5,7 @@
 
 @if (!InstrumentConfigurationState.Value.IsValid)
 {
-    <MudAlert Severity="Severity.Warning" Class="mx-3" Variant="Variant.Outlined">Please enable at least two instruments.</MudAlert>
+    <MudAlert Severity="Severity.Warning" Class="mx-3" Variant="Variant.Outlined">Please enable at least one instrument.</MudAlert>
 }
 @foreach (var instrument in InstrumentConfigurationService.ConfigurableInstruments)
 {
