--- a/src/BaroquenMelody.App.Components/Layout/NavMenu.razor
+++ b/src/BaroquenMelody.App.Components/Layout/NavMenu.razor
@@ -1,5 +1,6 @@
 ﻿<MudNavMenu Bordered="true" Color="Color.Primary" Rounded="true">
     <MudDivider />
-    <MudNavLink Href="" Match="NavLinkMatch.All" IconColor="Color.Secondary" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="about" Match="NavLinkMatch.Prefix" IconColor="Color.Secondary" Icon="@Icons.Material.Filled.QuestionMark">About</MudNavLink>
+    <MudNavLink Href="" Match="NavLinkMatch.All" IconColor="Color.Secondary" Icon="@Icons.Material.Sharp.Home">Home</MudNavLink>
+    <MudNavLink Href="configurations" Match="NavLinkMatch.Prefix" IconColor="Color.Secondary" Icon="@Icons.Material.Sharp.Folder">Saved Configurations</MudNavLink>
+    <MudNavLink Href="about" Match="NavLinkMatch.Prefix" IconColor="Color.Secondary" Icon="@Icons.Material.Sharp.QuestionMark">About</MudNavLink>
 </MudNavMenu>
