--- a/src/BaroquenMelody.App.Components/_Imports.razor
+++ b/src/BaroquenMelody.App.Components/_Imports.razor
@@ -51,3 +51,6 @@
 @inject IMidiSaver MidiSaver
 @inject ISnackbar Snackbar
 @inject IDialogService Dialog
+@inject ICompositionConfigurationPersistenceService CompositionConfigurationPersistenceService
+@inject NavigationManager NavigationManager
+@inject IDialogService DialogService
