--- a/src/BaroquenMelody.App.Components/Pages/SavedConfigurations.razor
+++ b/src/BaroquenMelody.App.Components/Pages/SavedConfigurations.razor
@@ -16,6 +16,7 @@
                           InputMode="InputMode.text"
                           Adornment="Adornment.Start"
                           AdornmentIcon="@Icons.Material.Outlined.Search"
+                          AdornmentColor="Color.Secondary"
                           IconSize="Size.Medium"/>
         </ToolBarContent>
         <HeaderContent>
